--- a/apitests.ipynb
+++ b/apitests.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "%load_ext autoreload\n",
@@ -22,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check_and_process_connections_interval_sec: 5.0\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "from datetime import datetime, timezone\n",
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +47,7 @@
        "5.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,13 +79,8 @@
     "\n",
     "    async def _process_connection_task(self, connection_id, diarizer_step=60, transcriber_step=5):\n",
     "        redis_client = await get_redis_client(settings.redis_host, settings.redis_port, settings.redis_password)\n",
-    "        meeting_id, segment_start_timestamp, segment_end_timestamp, user_id = await self.writestream2file(\n",
-    "            connection_id\n",
-    "        )\n",
-    "        segment_start_timestamp = datetime.fromisoformat(segment_start_timestamp, \"%Y-%m-%dT%H:%M:%S.%fZ\") if segment_start_timestamp else None\n",
-    "      #  segment_start_timestamp.tzinfo = timezone.utc\n",
-    "        segment_end_timestamp = datetime.fromisoformat(segment_end_timestamp, \"%Y-%m-%dT%H:%M:%S.%fZ\") if segment_end_timestamp else None\n",
-    "       # segment_end_timestamp.tzinfo = timezone.utc\n",
+    "        meeting_id, segment_start_timestamp, segment_end_timestamp, user_id = await self.writestream2file(connection_id)\n",
+    "\n",
     "        current_time = datetime.now(timezone.utc)\n",
     "\n",
     "        connection = Connection(redis_client, connection_id, user_id)\n",
@@ -140,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "diarizer_step=60\n",
+    "diarizer_step=10\n",
     "transcriber_step=5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,27 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['5600b1d9-8e3f-4e84-9cf5-170093ec568d']"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "connection_ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,16 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'5600b1d9-8e3f-4e84-9cf5-170093ec568d'"
+       "'25b0a1b4-78e7-4bf3-9d1c-c64bf59b845d'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +192,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "redis_client = await get_redis_client(settings.redis_host, settings.redis_port, settings.redis_password)\n",
+    "meeting_id, segment_start_timestamp, segment_end_timestamp, user_id = await self.writestream2file(connection_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "current_time = datetime.now(timezone.utc)\n",
+    "\n",
+    "connection = Connection(redis_client, connection_id, user_id)\n",
+    "await connection.update_timestamps(segment_start_timestamp, segment_end_timestamp)\n",
+    "\n",
+    "meeting = Meeting(redis_client, meeting_id)\n",
+    "await meeting.load_from_redis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await meeting.set_start_timestamp(segment_start_timestamp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diarizer added\n",
+      "transcriber added\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "await meeting.add_connection(connection.id)\n",
+    "\n",
+    "meeting.diarizer_last_updated_timestamp = meeting.diarizer_last_updated_timestamp or segment_start_timestamp\n",
+    "meeting.transcriber_last_updated_timestamp = meeting.transcriber_last_updated_timestamp or segment_start_timestamp\n",
+    "\n",
+    "if (current_time - meeting.diarizer_last_updated_timestamp).seconds > diarizer_step:\n",
+    "    diarizer = Diarizer(redis_client)\n",
+    "    await diarizer.add_todo(meeting.meeting_id)\n",
+    "    await meeting.update_diarizer_timestamp(\n",
+    "        segment_start_timestamp, diarizer_last_updated_timestamp=current_time\n",
+    "    )\n",
+    "    print(\"diarizer added\")\n",
+    "\n",
+    "if (current_time - meeting.transcriber_last_updated_timestamp).seconds > transcriber_step:\n",
+    "    transcriber = Transcriber(redis_client)\n",
+    "    await transcriber.add_todo(meeting.meeting_id)\n",
+    "    await meeting.update_transcriber_timestamp(\n",
+    "        segment_start_timestamp, transcriber_last_updated_timestamp=current_time\n",
+    "    )\n",
+    "    print(\"transcriber added\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 5, 22, 15, 41, 22, 776157, tzinfo=tzutc())"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meeting.diarizer_last_updated_timestamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 5, 22, 15, 41, 22, 776157, tzinfo=datetime.timezone.utc)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection_id = connection_ids[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'87a3f4b1-5b50-45be-b2c7-dfd83ebfe022'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,17 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(datetime.datetime(2024, 5, 21, 13, 36, 30, 414729, tzinfo=datetime.timezone.utc),\n",
-       " datetime.datetime(2024, 5, 21, 13, 36, 36, 248962, tzinfo=datetime.timezone.utc))"
+       "(datetime.datetime(2024, 5, 22, 14, 27, 59, 846448, tzinfo=datetime.timezone.utc),\n",
+       " datetime.datetime(2024, 5, 22, 14, 28, 9, 48882, tzinfo=datetime.timezone.utc))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,16 +364,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'meeting1'"
+       "'https://meet.google.com/jmt-yfgt-rzp'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,16 +423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 5, 21, 13, 37, 40, 993030, tzinfo=datetime.timezone.utc)"
+       "datetime.datetime(2024, 5, 22, 14, 28, 11, 963135, tzinfo=datetime.timezone.utc)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,16 +460,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 5, 21, 13, 36, 30, 414729, tzinfo=tzutc())"
+       "datetime.datetime(2024, 5, 22, 14, 27, 59, 846448, tzinfo=tzutc())"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,18 +480,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "diarizer added\n",
-      "transcriber added\n"
-     ]
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "diarizer_step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 5, 22, 14, 27, 59, 846448, tzinfo=tzutc())"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meeting.diarizer_last_updated_timestamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "if (current_time - meeting.diarizer_last_updated_timestamp).seconds > diarizer_step:\n",
@@ -397,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +553,7 @@
        "Settings(service_version='0.0.1_example', service_name='Audio API', service_api_host='0.0.0.0', service_api_port=8009, service_token='service_token', check_and_process_connections_interval_sec=5.0, stream_queue_service_list_connections='http://host.docker.internal:8000/api/v1/connections/list', stream_queue_service_flush_cache='http://host.docker.internal:8000/api/v1/tools/flush-cache', stream_queue_service_get_next_chunks='http://host.docker.internal:8000/api/v1/tools/get-next-chunks', stream_queue_service_health='http://host.docker.internal:8000/api/v1/health', stream_queue_service_health_check='http://host.docker.internal:8000/api/v1/hc', stream_queue_service_request_timeout=5, stream_queue_service_auth_token='LKJBn98wefgh', redis_host='redis', redis_port=6379, redis_password='', volume_data_path='/home/dima/ssd/0', redis_image_port='6382')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +573,7 @@
        "0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,16 +584,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 5, 21, 13, 37, 40, 993030, tzinfo=datetime.timezone.utc)"
+       "datetime.datetime(2024, 5, 22, 14, 28, 11, 963135, tzinfo=tzutc())"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,16 +604,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 5, 21, 13, 37, 40, 993030, tzinfo=datetime.timezone.utc)"
+       "datetime.datetime(2024, 5, 22, 14, 28, 11, 963135, tzinfo=tzutc())"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,16 +624,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 5, 20, 17, 38, 5, 107331, tzinfo=datetime.timezone.utc)"
+       "datetime.datetime(2024, 5, 22, 14, 27, 59, 846448, tzinfo=datetime.timezone.utc)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,16 +644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 5, 20, 17, 38, 5, 107331, tzinfo=tzutc())"
+       "datetime.datetime(2024, 5, 22, 14, 27, 59, 846448, tzinfo=datetime.timezone.utc)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,16 +664,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 5, 20, 17, 40, 20, 332570, tzinfo=datetime.timezone.utc)"
+       "datetime.datetime(2024, 5, 22, 14, 28, 11, 963135, tzinfo=tzutc())"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
